Write results to file

--- a/HonoursGeneratingFunction/appsettings.json
+++ b/HonoursGeneratingFunction/appsettings.json
@@ -1,4 +1,4 @@
 {
   "bitStringLength": 16,
-  "ResultFilePath": "C:\\Users\\byron.antak\\Documents\\University\\COS700\\Results\\16_D=0.25_Parallel"
+  "ResultFilePath": "C:\\Users\\byron.antak\\Documents\\University\\COS700\\Results\\16_B=0.001"
 }
